// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hand should mount Component with cards 1`] = `
<div>
  <div
    class="hand"
  >
    <div
      class="cards"
    >
      <div
        class="card"
      >
        <span
          class="card-name"
        >
          pikachu
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hand should mount Components without cards 1`] = `
<div>
  <div
    class="hand"
  >
    <div
      class="cards"
    >
      <span
        class="no-cards"
      >
        Mão vazia
      </span>
    </div>
  </div>
</div>
`;
